force-app/main/default/objects/leaseworks__WF_Field_Summary__c/leaseworks__WF_Field_Summary__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>World Fleet Field Summary</label>
    <nameField>
        <label>As of Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>World Fleet Field Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>