force-app/main/default/objects/leaseworks__WF_Field_Summary__c/fields/leaseworks__Build_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Build_Year__c</fullName>
    <label>Build Year</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>