force-app/main/default/objects/leaseworks__WF_Field_Summary__c/fields/leaseworks__Exclude_Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exclude_Aircraft_Type__c</fullName>
    <label>Exclude Aircraft Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>