force-app/main/default/objects/leaseworks__WF_Field_Summary__c/fields/leaseworks__OperatorArea__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__OperatorArea__c</fullName>
    <label>OperatorArea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>